force-app/main/default/objects/Event__c/fields/Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image__c</fullName>
    <label>Banner Image</label>
    <type>Url</type>
</CustomField>