force-app/main/default/objects/Event__c/fields/Sold_Out__c.field-meta.xml
<CustomField>
    <fullName>Sold_Out__c</fullName>
    <formula>Tickets_Remaining__c = 0 &amp;&amp; Is_Active__c  = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Out</label>
    <type>Checkbox</type>
</CustomField>