force-app/main/default/objects/Event__c/fields/Total_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets__c</fullName>
    <label>Total Tickets</label>
    <summarizedField>Ticket_Type__c.Total_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Ticket_Type__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>