force-app/main/default/objects/Event__c/validationRules/Event_Activation_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Activation_Error</fullName>
    <active>true</active>
    <errorConditionFormula>(Total_Tickets__c &lt;= 0 ||  Tickets_Remaining__c &lt;= 0) &amp;&amp;  Is_Active__c = true</errorConditionFormula>
    <errorMessage>you cannot activate an event without atleast an active ticket type with quantity greater than 0</errorMessage>
</ValidationRule>